fix: Question Bar Style on Mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -57,6 +57,13 @@ code {
   font-size: 30px;
 }
 
+@media (max-width: 500px) {
+  #question-container {
+    height: 20px;
+    font-size: 15px;
+  }
+}
+
 #question {
   all: unset;
   width: 100%;
